--- a/index.html
+++ b/index.html
@@ -9,15 +9,25 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <div class='wrapper'>
-        <div class='nav'>
-            <div class='nav-header'>
-                <h1>The Better Toggl</h1>
-            </div>
+    <div class="all">
+        <div class='head'>
+            <h1>Timmer</h1>
         </div>
-        <div class='container'>
-            <div class='butt-hold'>
-                <button>Go</button>
+        <div class="mainBod">
+            <div class='clock'>
+                <h2>00:00</h2>
+            </div>
+            <div class="centerDeets">
+                <div class='minorHead'><h3>Coding this site</h3></div>
+                <div class='infoAnimal'>
+                    <button>Go</button>
+                </div>
+            </div>
+            <div class="projectHold">
+                <div>
+                    <input class='minorHead' type='text' name='newProject' placeholder="new project">
+                </div>
+                <div><input class='prevProject' type='button' name='project' value="working"></div>
             </div>
         </div>
     </div>
