setting up some react stuff, still need webpack

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,10 @@
     <script src="main.js"></script>
 </head>
 <body>
+    <div id='app'></div>
     <div class="all">
         <div class='head'>
-            <h1>Timmer</h1>
+            <h1>Timer</h1>
         </div>
         <div class="mainBod">
             <div class='clock'>
@@ -28,6 +29,7 @@
                     <input class='minorHead' type='text' name='newProject' placeholder="new project">
                 </div>
                 <div><input class='prevProject' type='button' name='project' value="working"></div>
+                <div><input class='prevProject' type='button' name='project' value="coding this site"></div>
             </div>
         </div>
     </div>
